cleanup profiling doc